refactor(customer-service): changed reduce operation